@@ -5,6 +5,8 @@ import ru.vsu.amm.java.enums.DrinkName;
 
 import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
+import java.util.Arrays;
+import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.logging.Logger;
@@ -14,8 +16,12 @@ public class BaristaService {
 
     private static final Logger logger = Logger.getLogger(BaristaService.class.getName());
 
-
     public List<DrinkName> getMorningDrinks(List<DrinkRecord> drinkRecords) {
+        if (drinkRecords == null) {
+            logger.warning("drinkRecords is null");
+            return List.of();
+        }
+
         logger.info("Начинаем анализ напитков, заказанных утром с 7 до 9.");
         return drinkRecords.stream()
                 .filter(record -> {
@@ -23,12 +29,17 @@ public class BaristaService {
                     return hour >= 7 && hour < 9;
                 })
                 .map(DrinkRecord::getDrinkName)
-                .distinct()
-                .collect(Collectors.toList());
+                .collect(Collectors.toCollection(LinkedHashSet::new))
+                .stream()
+                .toList();
     }
 
-
     public List<DrinkName> getDrinksNotOrderedLast3Months(List<DrinkRecord> drinkRecords) {
+        if (drinkRecords == null) {
+            logger.warning("drinkRecords is null");
+            return List.of();
+        }
+
         logger.info("Анализ напитков, которые не заказывались за последние 3 месяца.");
         LocalDateTime threeMonthsAgo = LocalDateTime.now().minus(3, ChronoUnit.MONTHS);
 
@@ -37,13 +48,17 @@ public class BaristaService {
                 .map(DrinkRecord::getDrinkName)
                 .collect(Collectors.toSet());
 
-        return List.of(DrinkName.values()).stream()
+        return Arrays.stream(DrinkName.values())
                 .filter(drink -> !recentDrinks.contains(drink))
-                .collect(Collectors.toList());
+                .toList();
     }
 
-
     public long countCappuccino(List<DrinkRecord> drinkRecords) {
+        if (drinkRecords == null) {
+            logger.warning("drinkRecords is null");
+            return 0;
+        }
+
         logger.info("Считаем количество приготовленных капучино.");
         return drinkRecords.stream()
                 .filter(record -> DrinkName.CAPPUCHINO.equals(record.getDrinkName()))
